# research-project

./: .gitignore  .gitmodules  Cargo.toml  Pipfile  README.md  benchmark_output.txt  benchmark_output_25_1.txt  benchmark_output_25_3_preview.txt  benchmark_output_75_3.txt  comparison_25percent_1teams.txt  output.yaml  paths.txt  requirements.txt  run_benchmark.sh  searchGraph.dot  temp.map  temp.scen  test.csv
assets/: agents_diff.webm
docs/: README.md  TODO.md  algorithm_propositions.md  definitions.md  mapfm_definition.md  matching.md  mmapf_definition.md  project_definition_summary.md  project_summary.md  questions.md  results.txt
maps/: den312d.map  warehouse1.map  warehouse2.map
outputs/: 32x32_12-32x32-A10_T12-00.sol  32x32_12-32x32-A10_T12-01.sol  32x32_12-32x32-A10_T12-02.sol  32x32_12-32x32-A10_T12-03.sol  32x32_12-32x32-A10_T12-04.sol  32x32_12-32x32-A10_T12-05.sol  32x32_12-32x32-A10_T12-06.sol  32x32_12-32x32-A10_T12-07.sol  32x32_12-32x32-A10_T12-08.sol  32x32_12-32x32-A10_T12-09.sol  32x32_12-32x32-A10_T12-10.sol  32x32_12-32x32-A10_T12-11.sol  32x32_12-32x32-A10_T12-12.sol  32x32_12-32x32-A10_T12-13.sol  32x32_12-32x32-A10_T12-14.sol  32x32_12-32x32-A10_T12-15.sol  32x32_12-32x32-A10_T12-16.sol  32x32_12-32x32-A10_T12-17.sol  32x32_12-32x32-A10_T12-18.sol  (+10102 more)
python/: agent.py  (+13 more)
rust/: Cargo.toml
rust/src/: algorithm.rs  api.rs  coordinate.rs  grid.rs  main.rs  marked_coordinate.rs  problem.rs  solution.rs  train.rs  traintype.rs
rust/src/mapf/: agent.rs  astar_od_id.rs  distance_heuristic.rs  graphlike.rs  grid.rs  mapf_problem.rs  mod.rs  mstar.rs
(+96713 files in other folders)
