[package]
name = "mapfm"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust implementation of the M* algorithm."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
impl_ops = "0.1.1"
reqwest = {version = "0.11.3", features = ["blocking", "json"]}
thiserror = "1.0.25"
serde = {version="1.0.126", features=["derive"]}
